# i3-ricer

./: Cargo.toml  README.md
src/: compiler.rs  main.rs  theme.rs  wallpaper.rs
